--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <main>
         <!-- Start-screen -->
+	<!-- first comment -->
         <div id="start-screen">
 
             <div id="opening-screen">
