--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/reset.css"/>
     <link rel="stylesheet" href="./styles/style.css">
-    <title>RunningMan</title>
+    <title>Running Man</title>
 </head>
 <body>
     <main>
@@ -25,19 +26,35 @@
                     <div class="button-instruction">
                         <p> Use the following keys to control your character:</p>
                             <div>
-                                <img src="./Image/arrows png.png" alt="keyboard arrrows">
+                                <img src="./images/arrows.png" alt="keyboard arrrows">
                             </div>
                             <div>
-                                <img src="./Image/space png.png" alt="spacebar">
+                                <img src="./images/space_bar.png" alt="spacebar">
                             </div>
                     </div>
             </div>
             <button id="start-game">Start Game</button>
         </div>
             
+        <!-- Game Screen -->
+        <div id="game-container">
+            <div>
+                <!-- <img src="./images/beautiful-landscape-view-ocean.jpg"/> -->
+                <div class="live-stats">
+                    <h2>Stats</h2>
+                    <p>Health: <span id="health">100</span> %</p>
+                    <p>Resources: $ <span id="money">0</span></p>
+                </div>
+                <div class="live-stats">
+                    <p>Speed: <span id="speed">0</span> Klm/sec</p>
+                    <p>Distance: <span id="distance">40</span> Klm</p>
+                </div>
+            </div>
+            <!-- #game-screen is initially hidden using CSS style display: none -->
+            <div id="game-screen"></div> <!-- should load game screen dynamically with a perspective background -->
+        </div>
 
-        <div id="game-container"></div>
-
+        <!-- Game End Screen -->
         <div id="level-or-game-end">
             <div>
 
@@ -59,7 +76,7 @@
 
     </main>
 
-    <script type="module" src="./js/game.js"></script>
+    <script type="type/javascript" src="./js/game.js"></script>
 
 </body>
 </html>
