code done with a btn JS'

--- a/index.html
+++ b/index.html
@@ -25,11 +25,18 @@
 
                     <div class="button-instruction">
                         <p> Use the following keys to control your character:</p>
+
                             <div>
                                 <img src="./images/arrows.png" alt="keyboard arrrows">
+                                <p>left up down right  </p>
+                            </div>
+                            <div>
+                                <img src="./images/C-jump png.png" alt="c for jump">
+                                <p>C for jump</p>
                             </div>
                             <div>
                                 <img src="./images/space_bar.png" alt="spacebar">
+                                <p>space for jump</p>
                             </div>
                     </div>
             </div>
@@ -77,6 +84,6 @@
     </main>
 
     <script type="type/javascript" src="./js/game.js"></script>
-
+    <script src="./js/script.js"></script>
 </body>
 </html>
