--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             </div>
                             <div>
                                 <img src="./images/C-jump png.png" alt="c for jump">
-                                <p>C for jump</p>
+                                <p>C for duck</p>
                             </div>
                             <div>
                                 <img src="./images/space_bar.png" alt="spacebar">
