--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!-- #game-screen is initially hidden using CSS style display: none -->
             <div id="game-screen">
                 <img src="../images/road.jpg" alt="road image"/>
-                <img id="player" src="../images/player.png" alt="player"/>
+                <img id="player" src="./images/man-imageqwe.png" alt="player"/>
             </div> <!-- should load game screen dynamically with a perspective background -->
         </div>
 
