running man - image

--- a/index.html
+++ b/index.html
@@ -59,11 +59,7 @@
             <!-- #game-screen is initially hidden using CSS style display: none -->
             <div id="game-screen">
                 <img src="../images/road.jpg" alt="road image"/>
-<<<<<<< Updated upstream
-                <img id="player" src="./images/—Pngtree—painted running character back view_4078040.png" alt="player"/>
-=======
-                <img id="player" src="../images/running.gif" alt="player"/>
->>>>>>> Stashed changes
+                <img id="player" src="../images/therunningman.png" alt="player"/>
             </div> <!-- should load game screen dynamically with a perspective background -->
         </div>
 
