--- a/index.html
+++ b/index.html
@@ -59,10 +59,7 @@
             <!-- #game-screen is initially hidden using CSS style display: none -->
             <div id="game-screen">
                  <img src="../images/road.jpg" alt="road image"/>
-                <div id="game-road">
-                   
-                    <!-- <img id="player" src="../images/therunningman.png" alt="player"/> -->
-                </div> <!-- should load game screen dynamically with a perspective background -->
+                <div id="game-strip"></div>
             </div>
         </div>
 
