--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
             <!-- #game-screen is initially hidden using CSS style display: none -->
             <div id="game-screen">
                  <img src="../images/road.jpg" alt="road image"/>
-                <div id="game-strip"></div>
+                <div id="road-strip">
+                    
+                </div>
             </div>
         </div>
 
