--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
             </div>
             <!-- #game-screen is initially hidden using CSS style display: none -->
             <div id="game-screen">
-                <img src="../images/road.jpg" alt="road image"/>
-                <img id="player" src="../images/therunningman.png" alt="player"/>
-            </div> <!-- should load game screen dynamically with a perspective background -->
+                 <img src="../images/road.jpg" alt="road image"/>
+                <div id="road-strip">
+                    
+                </div>
+            </div>
         </div>
 
         <!-- Game End Screen -->
@@ -85,7 +87,9 @@
 
     </main>
 
-    <script type="type/javascript" src="./js/game.js"></script>
-    <script src="./js/script.js"></script>
+    <script type="text/javascript" src="./js/obstacle.js"></script>
+    <script type="text/javascript" src="./js/player.js"></script>
+    <script type="text/javascript" src="./js/game.js"></script>
+    <script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
