--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
         </div>
 
     </main>
-
     <script type="text/javascript" src="./js/obstacle.js"></script>
+    <script type="text/javascript" src="./js/money.js"></script>
+    <script type="text/javascript" src="./js/badObstacle.js"></script>
+    <script type="text/javascript" src="./js/goodObstacle.js"></script>
     <script type="text/javascript" src="./js/player.js"></script>
     <script type="text/javascript" src="./js/game.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
