working all obstacles

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                                 <img src="./images/arrows.png" alt="keyboard arrrows">
                                 <p>left up down right  </p>
                             </div>
-                            <div>
+                            <!-- <div>
                                 <img src="./images/C-jump png.png" alt="c for jump">
                                 <p>C for duck</p>
                             </div>
                             <div>
                                 <img src="./images/space_bar.png" alt="spacebar">
                                 <p>space for jump</p>
-                            </div>
+                            </div> -->
                     </div>
             </div>
             <button id="start-game">Start Game</button>
