--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <!-- Game Screen -->
         <div id="game-container">
             <div id="skyline">
-                <!-- <img src="./images/beautiful-landscape-view-ocean.jpg"/> -->
+                <img id="clou" alt="" srcset="">
                 <div class="live-stats">
                     <p>Health: <span id="health">100</span> %</p>
                     <p>Resources: $ <span id="money">0</span></p>
