man new doundaries and sky

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <!-- Game Screen -->
         <div id="game-container">
             <div id="skyline">
+                <!-- <div id="clouds"></div> -->
                 <div class="live-stats">
                     <p>Health: <span id="health">100</span> %</p>
                     <p>Resources: $ <span id="money">0</span></p>
