--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p>Running Man Adventure</p>
 
             <div class="instruction-info-buttons">
-                <p>Welcome to the Running Man Adventure game! In this fast-paced race, your goal is to guide the running man through various challenges and obstacles.</p>
+                    <p>Welcome to the Running Man Adventure game! Your mission is to navigate the running man through challenges and obstacles. Be quick on your feet and agile in your decisions! Avoid collisions with tempting fast food,  Instead, seek healthy options to boost your health. Keep an eye out for scattered money along the way - collect it to unlock access to the nourishing food that will fuel your progress.</p>
 
                     <div class="button-instruction">
                         <p> Use the following keys to control your character:</p>
@@ -51,6 +51,7 @@
                     <p>Health: <span id="health">100</span> %</p>
                     <p>Resources: $ <span id="money">0</span></p>
                 </div>
+                <div id="colision-hapens">-5 $</div>
                 <div class="live-stats">
                     <p>Speed: <span id="speed">0</span> Klm/sec</p>
                     <p>Distance: <span id="distance">20</span> Klm</p>
