added comment for -5

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <p>Health: <span id="health">100</span> %</p>
                     <p>Resources: $ <span id="money">0</span></p>
                 </div>
-                <div id="colision-hapens">-5 $</div>
+                <!-- <div id="colision-hapens">-5 $</div> -->
                 <div class="live-stats">
                     <p>Speed: <span id="speed">0</span> Klm/sec</p>
                     <p>Distance: <span id="distance">20</span> Klm</p>
