--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <!-- #game-screen is initially hidden using CSS style display: none -->
             <div id="game-screen">
-                 <img src="../images/road.jpg" alt="road image"/>
+                 <img src="./images/road.jpg" alt="road image"/>
                 <div id="road-strip">
                     
                 </div>
