--- a/index.html
+++ b/index.html
@@ -111,6 +111,18 @@
             </div>
         </div>
 
+        <audio>
+            <source id="opening-music" src="./music-game/1-2Elevator-music.1-2stscreen.mp3" type="beginning-music">
+            <source id="first-level" src="./music-game/3-1LevelJohn-Bartmann-Allez-Allez.mp3" type="first-level-music">
+            <source id="second-level" src="./music-game/5Cooking-Long-Version(2level).mp3" type="second-level-music">
+            <source id="lose-music" src="./music-game/6Fluffing-a-Duck-Lse Screen.mp3" type="lose-music">
+            <source id="win-music" src="./music-game/4win-screen.mp3" type="win-music">
+            <source id="good-crash" src="./music-game/good-crash.mp3" type="good-crush">
+            <source id="money-crash" src="./music-game/money-crash.wav" type="moeny-crash">
+            <source id="bad-crash" src="./music-game/bad-crash? maybe.wav" type="bad-crash">
+            <source id="btn-sound" src="./music-game/button-click-2.mp3" type="button">
+        </audio>
+
     </main>
     <script type="text/javascript" src="./js/obstacle.js"></script>
     <script type="text/javascript" src="./js/money.js"></script>
