--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
         </div>
 
         <audio>
-            <source id="opening-music" src="./" type="beginning-music">
-            <source id="first-level" src="./music-game/3-1LevelJohn-Bartmann-Allez-Allez.mp3" type="first-level-music">
+            <source id="opening-music" src="./music-game/1-2ElevatorMusic.mp3" type="beginning-music">
+            <source id="first-level" src="./music-game/1LevelJohn-Bartmann-Allez-Allez.mp3" type="first-level-music">
             <source id="second-level" src="./music-game/5Cooking-Long-Version(2level).mp3" type="second-level-music">
             <source id="lose-music" src="./music-game/6Fluffing-a-Duck-Lse Screen.mp3" type="lose-music">
             <source id="win-music" src="./music-game/4win-screen.mp3" type="win-music">
