--- a/index.html
+++ b/index.html
@@ -110,20 +110,35 @@
                 <button id="restart-btn">Restart</button> 
             </div>
         </div>
-
-        <audio>
-            <source id="opening-music" src="./music-game/1-2ElevatorMusic.mp3" type="beginning-music">
-            <source id="first-level" src="./music-game/1LevelJohn-Bartmann-Allez-Allez.mp3" type="first-level-music">
-            <source id="second-level" src="./music-game/5Cooking-Long-Version(2level).mp3" type="second-level-music">
-            <source id="lose-music" src="./music-game/6Fluffing-a-Duck-Lse Screen.mp3" type="lose-music">
-            <source id="win-music" src="./music-game/4win-screen.mp3" type="win-music">
-            <source id="good-crash" src="./music-game/good-crash.mp3" type="good-crush">
-            <source id="money-crash" src="./music-game/money-crash.wav" type="moeny-crash">
-            <source id="bad-crash" src="./music-game/bad-crash? maybe.wav" type="bad-crash">
-            <source id="btn-sound" src="./music-game/button-click-2.mp3" type="button">
+        <!-- <audio id="opening-music" preload="auto">
+            <source  src="./music-game/1-2ElevatorMusic.mp3" type="beginning-music">
         </audio>
-
+        <audio id="first-level" preload="auto">
+            <source  src="./music-game/1LevelJohn-Bartmann-Allez-Allez.mp3" type="first-level-music">
+        </audio>
+        <audio id="second-level" preload="auto">
+            <source  src="./music-game/5Cooking-Long-Version-2level.mp3" type="second-level-music">
+        </audio>
+        <audio id="lose-music" preload="auto">
+            <source  src="./music-game/6Fluffing-a-Duck-Lse-Screen.mp3" type="lose-music">
+        </audio>
+        <audio id="win-music" preload="auto">
+            <source  src="./music-game/4win-screen.mp3" type="win-music">
+        </audio>
+        <audio id="good-crash" preload="auto">
+            <source  src="./music-game/good-crash.mp3" type="good-crush">
+        </audio>
+        <audio id="money-crash" preload="auto">
+            <source  src="./music-game/money-crash.wav" type="moeny-crash">
+        </audio>
+        <audio id="bad-crash" preload="auto">
+            <source  src="./music-game/bad-crash-maybe.wav" type="bad-crash">
+        </audio>    
+        <audio id="btn-sound" preload="auto">
+            <source src="./music-game/button-click-2.mp3" type="button">
+        </audio>   -->
     </main>
+    <script type="text/javascript" src="./js/audioplayer.js"></script>
     <script type="text/javascript" src="./js/obstacle.js"></script>
     <script type="text/javascript" src="./js/money.js"></script>
     <script type="text/javascript" src="./js/badObstacle.js"></script>
