Featuer/moving obsticals (#9)
* test commit

* code formatting, and tried to add something on second screen

* code done with a btn JS'

* added runnign man images and game screen

* fix man

* last changes

* something

* running man png

* fixed conflict

* running man - image

* removed unwanted images

* first js commit

* roar strip completed

* initialized player object

* initialized player object

* player jump

* move player and jump

* player moves and jumps

* show obstical

* last working version

* random obstacles

* correctly moving obsticals...

* working all obstacles

* re-sized, player boundaries, moving all Obstacles in all correct dirrections

* separating concerns

* formatting and removed unwanted comments

* boundaries of the player, and some little adgustments

* stable version of moving man with obstacles and collision

* working health and resources logic

* clean up

* better bowndaries of the runner

* moving clound

* last changes

* man new doundaries and sky

* health not beyond 100 , money no less than 0

* fix losing logic

* timer completed - distance

* next-level changed

* last changres from 14.Nov.23

* First level less item, reduce health through time, change in distance for level2, speed update in between screen, added button hover for restart

* win last page

* fix win screen

* added comment for -5

* imagers

* debug second level

* images again

* little changes

* live updates

* fixed errors

* tweaks

* sounds

* changed file names

* name correction

* sounds tweaking

* sound effects

* finishing touch

* remvoed bad code

---------

Co-authored-by: Pencho Ivanov <penchoivanov@Penchos-Air.home>
Co-authored-by: Pencho Ivanov <penchoivanov@Penchos-MacBook-Air.local>

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                 <button id="restart-btn">Restart</button> 
             </div>
         </div>
-
     </main>
+    <script type="text/javascript" src="./js/audioplayer.js"></script>
     <script type="text/javascript" src="./js/obstacle.js"></script>
     <script type="text/javascript" src="./js/money.js"></script>
     <script type="text/javascript" src="./js/badObstacle.js"></script>
